[BUGFIX] Wrong Layout handle and Zoom Works after Img Exchange not

--- a/app/design/frontend/base/default/layout/jtl_connector.xml
+++ b/app/design/frontend/base/default/layout/jtl_connector.xml
@@ -73,7 +73,7 @@
             <block output="toHtml" type="catalog/product_view" name="product.tierprices" as="tierprices" template="catalog/product/view/tierprices.phtml" />
         </reference>
     </oi_ajax_co>
-    <oi_ajax_image>
+    <jtl_connector_ajax_image>
         <reference name="root">
             <action method="setTemplate">
                 <template>page/jtl_connector_contentonly.phtml</template>
@@ -82,7 +82,7 @@
         <reference name="content">
             <block output="toHtml" type="catalog/product_view_media" name="product.info.media" as="media" template="catalog/product/view/media.phtml" />
         </reference>
-    </oi_ajax_image>
+    </jtl_connector_ajax_image>
 
     <oi_ajax_gallery translate="label">
         <label>Catalog Product Image Gallery Popup</label>
